--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,24 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
+    <string name="login_failed">登录失败</string>
+    <string name="regist_failed">注册失败</string>
+    <string name="regist_account_conflict">该用户已存在</string>
+    <string name="logining">正在登录，请稍后&#8230;</string>
+    <string name="registing">正在注册，请稍后&#8230;</string>
+    <string name="network_error">没有可用的网络连接，请检查网络！</string>
+    
+    <string name="activity_lable_login">用户登录</string>
+    <string name="activity_lable_regist">用户注册</string>
+    
     <string name="login_hint_account">请输入账号</string>
+    <string name="login_hint_nickname">请输入昵称</string>
+    <string name="login_hint_email">请输入邮箱</string>
     <string name="login_hint_password">请输入密码</string>
+    <string name="login_hint_confirm_password">请输入确认密码</string>
     <string name="login_text_button_signin">登录</string>
+    <string name="login_text_button_regist">注册</string>
     <string name="login_text_regist">创建账号</string>
+    <string name="login_text_login">已有账号，点击登录</string>
 
 </resources>
