--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,10 @@
     <string name="app_name">TestChatApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
     <string name="add">添加</string>
+    <string name="no_data">没有数据</string>
+    <string name="no_result">没有结果</string>
     
     <string name="activity_lable_login">用户登录</string>
     <string name="activity_lable_regist">用户注册</string>
