--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
+    <string name="show">查看</string>
     <string name="add">添加</string>
     <string name="no_data">没有数据</string>
     <string name="no_result">没有结果</string>
@@ -20,6 +21,7 @@
     <string name="email">邮箱：%1$s</string>
     <string name="username">用户名：%1$s</string>
     <string name="nickname">昵称：%1$s</string>
+    <string name="realname">姓名：%1$s</string>
     
     <string name="sdcard_not_available">SD卡不可用！</string>
     
@@ -54,7 +56,10 @@
     <string name="contact_hint_search">查找</string>
     <string name="contact_searching">正在查找，请稍后&#8230;</string>
     <string name="contact_add_friend">添加好友</string>
-    <string name="contact_signature">个性签名</string>
+    <string name="contact_send_msg">发消息</string>
+    <string name="contact_modify">编辑</string>
+    <string name="contact_realname">姓名</string>
+    <string name="contact_mobile">手机</string>
     <string name="contact_address">地区</string>
     <string name="contact_send_add_friend_request_success">发送添加好友请求成功</string>
 
