--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="activity_lable_regist">用户注册</string>
     <string name="activity_lable_add_friend">添加好友</string>
     <string name="activity_lable_friend_info">好友详情</string>
+    <string name="activity_lable_chat">聊天</string>
     
     <string name="email">邮箱：%1$s</string>
     <string name="username">用户名：%1$s</string>
@@ -62,5 +63,8 @@
     <string name="contact_mobile">手机</string>
     <string name="contact_address">地区</string>
     <string name="contact_send_add_friend_request_success">发送添加好友请求成功</string>
+    
+    <string name="chat_msg_edit_hint">请输入内容</string>
+    <string name="chat_btn_make_voice_start">按住 说话</string>
 
 </resources>
