--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
+    <string name="send">发送</string>
     <string name="show">查看</string>
     <string name="add">添加</string>
     <string name="no_data">没有数据</string>
