--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
+    <string name="delete">删除</string>
+    
     <string name="send">发送</string>
     <string name="show">查看</string>
     <string name="add">添加</string>
@@ -19,7 +21,7 @@
     <string name="activity_lable_add_friend">添加好友</string>
     <string name="activity_lable_friend_info">好友详情</string>
     <string name="activity_lable_chat">聊天</string>
-    <string name="activity_lable_new_friend_info">聊天</string>
+    <string name="activity_lable_new_friend_info">新的朋友</string>
     
     <string name="email">邮箱：%1$s</string>
     <string name="username">用户名：%1$s</string>
