--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="action_settings">Settings</string>
     
     <string name="delete">删除</string>
+    <string name="delete_failed">删除失败</string>
+    <string name="delete_success">删除成功</string>
+    <string name="add_success">添加成功</string>
+    <string name="add_failed">添加失败</string>
     
     <string name="send">发送</string>
     <string name="show">查看</string>
@@ -74,6 +78,9 @@
     <string name="contact_new_friend_status_title_added">已添加</string>
     <string name="contact_new_friend_status_title_verifying">等待验证</string>
     <string name="contact_new_friend_status_title_accept">接受</string>
+    
+    <string name="contact_list_content_menu_set_nickname">设置备注</string>
+    <string name="contact_list_content_delete_prompt">确定删除“%1$s”吗？</string>
     
     <string name="chat_msg_edit_hint">请输入内容</string>
     <string name="chat_btn_make_voice_start">按住 说话</string>
