--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="action_create_group_chat">发起群聊</string>
     <string name="action_add_friend">添加朋友</string>
     
+    <!-- 相册选择图片的菜单 -->
+    <string name="action_select_complete">发送</string>
+    
     <string name="login_failed">登录失败</string>
     <string name="regist_failed">注册失败</string>
     <string name="request_address_failed">网络请求的地址不对</string>
@@ -90,5 +93,8 @@
     
     <string name="album_all_photo">所有图片</string>
     <string name="album_preview_photo">预览</string>
+    <string name="album_preview_photo_num">预览(%1$d)</string>
+    <string name="album_tip_max_select">只能选择%1$d张图片</string>
+    <string name="album_item_content">"%1$s\n\n%2$d张"</string>
 
 </resources>
