--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -110,5 +110,9 @@
     <string name="msg_thread_snippet_content_file">[文件]</string>
     <string name="msg_thread_snippet_content_location">[地理位置]</string>
     <string name="msg_thread_snippet_content_vcard">[电子名片]</string>
+    
+    <string name="file_explorer_folder_item_num">%1$d项</string>
+    <string name="file_explorer_folder_unreadable">不可读</string>
+    <string name="file_tip_max_select">只能选择%1$d个文件</string>
 
 </resources>
