1、修正了音乐显示的问题 2、添加了按住说话的语音生成功能

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="activity_lable_chat">聊天</string>
     <string name="activity_lable_new_friend_info">新的朋友</string>
     <string name="activity_lable_album">图片</string>
+    <string name="activity_lable_audio">音频</string>
     
     <string name="email">邮箱：%1$s</string>
     <string name="username">用户名：%1$s</string>
