--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="audio_item_content">%1$s\u0020|\u0020%2$s</string>
     <string name="audio_list_search_hint">请输入歌曲名</string>
     
+    <string name="chat_loction_opt_failed">分享地理位值失败，请稍后再试！</string>
+    
 </resources>
